# Machine-Learning-course

./: .gitignore  CMakeLists.txt
hw_lib/: CMakeLists.txt  Col.cpp  Col.h  ConfusionMatrix.cpp  ConfusionMatrix.h  Dataset.cpp  Dataset.h  GaussianDataGenerator.cpp  GaussianDataGenerator.h  IdxFileReader.cpp  IdxFileReader.h  Point.cpp  Point.h  PolynomialDataGenerator.cpp  PolynomialDataGenerator.h  matrix.cpp  matrix.h
src/HW1/: LSE.cpp  Newton.cpp  coeffs.txt  plot.py
src/HW2/: GaussianNaiveBayes.cpp  GaussianNaiveBayes.h  MNISTNaiveBayesClassifier.cpp  MNISTNaiveBayesClassifier.h  MultinomialNaiveBayes.cpp  MultinomialNaiveBayes.h  MultinominalNaiveBayes.cpp  MultinominalNaiveBayes.h  NaiveBayes.cpp  NaiveBayes.h  NaiveBayesClassifier.cpp  NaiveBayesClassifier.h  OnlineLearning.cpp  OnlineLearning.h  main.cpp  mnb.py
src/HW3/: BayesianLinearRegression.cpp  GaussianDataGenerator.cpp  GaussianDataGenerator.h  PolynomialDataGenerator.cpp  PolynomialDataGenerator.h  SequentialEstimator.cpp  data.txt  main.cpp  test.py  visualization.py  weights.txt  weights_10.txt  weights_10000.txt  weights_50.txt
src/HW4/: EMAlgorithm.cpp  EMAlgorithm.h  EMAlgorithm.py  LogisticRegression.cpp  LogisticRegression.h  hw4_EM_Algorithm.py  logistic_regression.py  lr_data.txt  lr_gradient.txt  lr_newton.txt  main.cpp  main_EM.cpp  main_lr.cpp  plot.py  test.txt
src/HW4/.ipynb_checkpoints/: EM-checkpoint.ipynb
src/HW5/: gaussian_process.py  hw5-2-1.py  hw5-2-2.py  hw5-2-3.py  test.py
src/HW6/: kmeans.py  spectral_clustering.py
src/HW7/: KNN.py  decomposition.py  hw7.py  sklearnpca.py  test.py
src/HW7/pca_lda/: decomposition.py  hw7.py  sklearnpca.py  test.py
src/HW7/tsne_python/tsne_python/: ssne.py  tsne.py
test/: IDXFileReader.cpp  matrix.cpp
